Cycles Baking: 3.x is much slower than 2.93 #94467

Closed
opened 2021-12-29 16:39:45 +01:00 by Grigoriy Titaev · 12 comments

Blender Version
Broken: 3.0, 3.1 (2021-12-27)
Worked: 2.93.7

Caused by Cycles-X merge

Short description of error
Bake Normal in 3.x is much slower than in 2.93.
3.1 is a bit slower than 3.0.

Time bake normal (2048x2048):

Samples 1 32 64 128
2.93 0:02 0:07 0:11 0:20
3.0 0:03 0:25 0:44 1:21
3.1 0:03 0:27 0:48 1:29
Test CPU: Intel Core i5-3337U

Test Bake Normal (2.93 - 3.x).blend


From #94854:

Short description of error

Exact steps for others to reproduce the error
This follows my other issue which you can find here:
https://developer.blender.org/T94217

It's probably related, but adding this as a separate ticket.

big baking bug.blend

Open up the .blend file in 2.93.5, and press bake, it should have no problem baking. On my machine it uses about 1.8GB of RAM and starts baking within a few seconds, then bakes very quickly, less than a minute.

Then open it in 3.0.0 and press bake, on my machine the RAM shoots up to almost 7GB, then after maybe a minute it starts to bake, then gets stuck at 1% and I'm assuming Cycles crashes, Blender then needs to be killed with extreme prejudice.

This happens no matter what you're trying to bake, it's not just normal maps, it's ANY bake. At the moment ALL my baking has to be done in 2.93.5, before baking I have to close 3.0.0, open the file in 2.93.5 and hit bake.

**Blender Version** Broken: 3.0, 3.1 (2021-12-27) Worked: 2.93.7 Caused by Cycles-X merge **Short description of error** Bake Normal in 3.x is much slower than in 2.93. 3.1 is a bit slower than 3.0. Time bake normal (2048x2048): | Samples | 1 | 32 | 64 | 128 | -- | -- | -- | -- | -- | | 2.93 | 0:02 | 0:07 | 0:11 | 0:20 | 3.0 | 0:03 | 0:25 | 0:44 | 1:21 | 3.1 | 0:03 | 0:27 | 0:48 | 1:29 Test CPU: Intel Core i5-3337U [Test Bake Normal (2.93 - 3.x).blend](https://archive.blender.org/developer/F12780655/Test_Bake_Normal__2.93_-_3.x_.blend) --- From #94854: **Short description of error** **Exact steps for others to reproduce the error** This follows my other issue which you can find here: https://developer.blender.org/T94217 It's probably related, but adding this as a separate ticket. [big baking bug.blend](https://archive.blender.org/developer/F12802406/big_baking_bug.blend) Open up the .blend file in 2.93.5, and press bake, it should have no problem baking. On my machine it uses about 1.8GB of RAM and starts baking within a few seconds, then bakes very quickly, less than a minute. Then open it in 3.0.0 and press bake, on my machine the RAM shoots up to almost 7GB, then after maybe a minute it starts to bake, then gets stuck at 1% and I'm assuming Cycles crashes, Blender then needs to be killed with extreme prejudice. This happens no matter what you're trying to bake, it's not just normal maps, it's ANY bake. At the moment ALL my baking has to be done in 2.93.5, before baking I have to close 3.0.0, open the file in 2.93.5 and hit bake.

Added subscriber: @gtitaev

Added subscriber: @gtitaev

#94854 was marked as duplicate of this issue

#94854 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report.
I can confirm the slowness.
The difference seems aggravated the more samples.
Occurred at some point between 8e21d528ca and 7ca48a3814

Thanks for the report. I can confirm the slowness. The difference seems aggravated the more samples. Occurred at some point between `8e21d528ca` and `7ca48a3814`
Philipp Oeser changed title from Bake Normal: 3.x is much slower than 2.93 to Cycles Baking: 3.x is much slower than 2.93 2022-01-24 11:28:54 +01:00
Member

Added subscribers: @Memm, @lichtwerk, @brecht, @erik85

Added subscribers: @Memm, @lichtwerk, @brecht, @erik85

This is still broken for me in 3.1, and it's not just slower for me, it crashes.
https://developer.blender.org/T94854

This is still broken for me in 3.1, and it's not just slower for me, it crashes. https://developer.blender.org/T94854

Added subscriber: @onikyannn

Added subscriber: @onikyannn

I can confirm the slowness and crashes on both 3.0 and 3.1.
Before the crash there was 100% RAM consumption.
df_scale_4_lightmap.crash.txt

I can confirm the slowness and crashes on both 3.0 and 3.1. Before the crash there was 100% RAM consumption. [df_scale_4_lightmap.crash.txt](https://archive.blender.org/developer/F13029889/df_scale_4_lightmap.crash.txt)
Member

@brecht : will raise priority here since this seems to be a regression from 2.93.
This probably came with 0803119725

@brecht : will raise priority here since this seems to be a regression from 2.93. This probably came with 0803119725

This issue was referenced by c722993ef1

This issue was referenced by c722993ef19d6e6a564311f4bdc3cfb214b1474a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-04-28 19:55:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94467
No description provided.