Fix T94467: Cycles baking of normal pass slower than before cycles-x